Fix for IE 11 and old versions of Edge stretching out images

--- a/src/style/CharityPageImpactAndDonate.less
+++ b/src/style/CharityPageImpactAndDonate.less
@@ -42,11 +42,15 @@
 	z-index: 10;
 
 	.project-image {
+		text-align: center;
 		img {
-			width: 100%;
+			// width: 100%;
 			max-height: 380px;
 			min-height: 50px;
-			object-fit: contain;
+			// IE 11 and Edge 15 do not understand object-fit
+			// object-fit: contain;
+			width: auto;
+			margin: auto;
 		}
 	}
 
